--- a/samples/play20/inputvalidator-demo/app/views/loginInput.scala.html
+++ b/samples/play20/inputvalidator-demo/app/views/loginInput.scala.html
@@ -1,5 +1,5 @@
 @(username: Option[String], password: Option[String], errors: Seq[String])
-@main("Input Validator DSL demo") {
+@main("Login Demo") {
 
   <form method="POST" action="/login/submit" class="form-horizontal">
     <fieldset>
