--- a/samples/play20/inputvalidator-demo/app/views/main.scala.html
+++ b/samples/play20/inputvalidator-demo/app/views/main.scala.html
@@ -22,7 +22,7 @@
   <body>
 
     <div class="container">
-      <h1>Demo</h1>
+      <h1>@title</h1>
       <hr/>
       @content
     </div> <!-- /container -->
